--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/simple-online-shop
     username: root
-    password: 
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -29,7 +29,10 @@ spring:
       enabled: always
 server:
   port: 8081
-
+minio:
+  endpoint: http://192.168.0.102:9000
+  accessKey: minioadmin
+  secretKey: minioadmin
 
 # Logging
 logging:
