--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
   main:
     lazy-initialization: false
   datasource:
-    url: jdbc:mysql://localhost:3306/simple-online-shop
+    url: jdbc:mysql://localhost:3306/simple_online_shop
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -33,6 +33,7 @@ minio:
   endpoint: http://192.168.0.102:9000
   accessKey: minioadmin
   secretKey: minioadmin
+  bucket: simple-online-shop
 
 # Logging
 logging:
