--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -30,7 +30,7 @@ spring:
 server:
   port: 8081
 minio:
-  endpoint: http://192.168.0.102:9000
+  endpoint: http://192.168.0.109:9000
   accessKey: minioadmin
   secretKey: minioadmin
   bucket: simple-online-shop
